--- a/tags_input/templates/tags_input_widget.html
+++ b/tags_input/templates/tags_input_widget.html
@@ -2,7 +2,7 @@
 
 <script type="text/javascript">
 //<![CDATA[
-jQuery(document).ready(function($){
+django.jQuery(document).ready(function($){
     $('#{{ id }}_tags_input').tagsInput({
         autocomplete: {
             source: '{{ autocomplete_url }}',
